design transformed into components

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Drum machine that imitate drum kit. Press key on your keyboard to play corresponding sound. Play your favorite soundtrack or just have fun!">
 
   <title>Drum Machine</title>
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:700" rel="stylesheet">
 </head>
 
 <body>
